fixed spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -43,7 +43,7 @@ body{
 
 .content {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     margin: 50px 80px;
 }
 
